убрал логику из контроллеров написал тесты для всех сервисов и контроллеров добавил ликвибейс и миграции